--- a/index.html
+++ b/index.html
@@ -9,8 +9,52 @@
 	<title>Train Management system</title>
 </head>
 <body>
+	 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Login modal link -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav> 
 
-	<div class="container">
+      <!-- Login modal -->
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                    <div class="form-group">
+                            <label class="sr-only" for="email">User Name</label>
+                            <input type="text" class="form-control input-sm" id="userName" placeholder="User Name">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="email">Email address</label>
+                            <input type="email" class="form-control input-sm" id="email" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="pwd">Password</label>
+                            <input type="password" class="form-control input-sm" id="pwd" placeholder="Password">
+                        </div>
+                        <button type="login" class="btn btn-info btn-sm">Sign In</button>
+                        <button type="register" class="btn btn-info btn-sm">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+  <!-- Main page -->
+
+	<div class="container" id="main">
 		<div class="jumbotron text-center background">
 			  <h1>Anytime is Train Time</h1>
 			  <h3>Choo Choo. Chee Chee</h3>
@@ -63,16 +107,31 @@
 					    <input type="number" class="form-control" id="frequency" placeholder="Frequency">
 					  </div>
 					  
-					  <button type="submit" class="btn btn-primary">Submit</button>
+					  <button type="button" id="addTrain" class="btn btn-primary">Submit</button>
 					</form>
 			  </div>
 		</div>
 	</div>	
 
-	<script src= "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
-	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
+	<
+
+	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script src= "https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/3.7.3/firebase.js"></script>
+	<script>
+	  // Initialize Firebase
+	  var config = {
+	    apiKey: "AIzaSyAUGTOQHHp9EaXP83VE_wBzVQKPzzfmDgI",
+	    authDomain: "employee-data-management-5554d.firebaseapp.com",
+	    databaseURL: "https://employee-data-management-5554d.firebaseio.com",
+	    storageBucket: "employee-data-management-5554d.appspot.com",
+	    messagingSenderId: "146230344080"
+	  };
+	  firebase.initializeApp(config);
+	</script>
+	<script src="assets/javascript/auth.js"></script>
 	<script src="assets/javascript/app.js"></script>
 </body>
 </html
